--- a/app/views/details/index.html.erb
+++ b/app/views/details/index.html.erb
@@ -19,6 +19,7 @@
         <td><%= link_to 'Show', detail %></td>
         <td><%= link_to 'Edit', edit_detail_path(detail) %></td>
         <td><%= link_to 'Destroy', detail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Send Email', detail, method: :email, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
