--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -11,7 +11,7 @@
       your username is: <%= @user.email %>.<br>
     </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      To continue, just follow this link: <%= @url %>.
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
