--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -5,6 +5,6 @@ Welcome to example.com, <%= @user.email %>
 You have successfully signed up to example.com,
 your username is: <%= @user.email %>.
 
-To login to the site, just follow this link: <%= @url %>.
+To continue, just follow this link: <%= @url %>.
 
 Thanks for joining and have a great day!
