--- a/app/views/details/index.html.erb
+++ b/app/views/details/index.html.erb
@@ -19,7 +19,8 @@
         <td><%= link_to 'Show', detail %></td>
         <td><%= link_to 'Edit', edit_detail_path(detail) %></td>
         <td><%= link_to 'Destroy', detail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to 'Send Email', detail, method: :email, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Send Email', details_email_path(:id => detail.id) %></td>
+        <!-- <td><%= link_to 'Send Email', details_path, method: :email, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
@@ -27,4 +28,5 @@
 
 <br>
 
+<%= link_to 'Send Email to all', details_emailAll_path(:details => @details), data: { confirm: 'Are you sure?' } %>
 <%= link_to 'New Detail', new_detail_path %>
